namespaces/live.cloud-platform.service.justice.gov.uk/activities-api-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: activities-api-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "activities-management"
    cloud-platform.justice.gov.uk/slack-alert-channel: "farsight-alerts"
    cloud-platform.justice.gov.uk/application: "Actvities API"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/activities-api.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
